--- a/admin/create-news.html
+++ b/admin/create-news.html
@@ -9,21 +9,35 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
         body { font-family: 'Inter', sans-serif; }
+        #sidebarOverlay {
+            transition: opacity 0.3s ease;
+        }
+        #sidebar {
+            transition: transform 0.3s ease;
+        }
     </style>
 </head>
 <body class="bg-gray-100">
     <div class="flex h-screen overflow-hidden">
+        <!-- Overlay -->
+        <div id="sidebarOverlay" class="fixed inset-0 bg-black bg-opacity-50 z-30 hidden lg:hidden"></div>
+
         <!-- Sidebar -->
-        <aside class="w-64 bg-[#1e3a8a] text-white flex-shrink-0">
+        <aside id="sidebar" class="fixed lg:static w-64 bg-[#1e3a8a] text-white flex-shrink-0 h-full z-40 transform -translate-x-full lg:translate-x-0">
             <div class="p-6 border-b border-blue-700">
-                <div class="flex items-center space-x-3">
-                    <div class="w-12 h-12 bg-white rounded flex items-center justify-center">
-                        <span class="text-[#1e3a8a] font-bold text-xl">LP</span>
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center space-x-3">
+                        <div class="w-12 h-12 bg-white rounded flex items-center justify-center">
+                            <span class="text-[#1e3a8a] font-bold text-xl">LP</span>
+                        </div>
+                        <div>
+                            <h2 class="font-bold">Admin Panel</h2>
+                            <p class="text-xs text-blue-200">lapas Medan</p>
+                        </div>
                     </div>
-                    <div>
-                        <h2 class="font-bold">Admin Panel</h2>
-                        <p class="text-xs text-blue-200">lapas Medan</p>
-                    </div>
+                    <button id="closeSidebar" class="lg:hidden text-white">
+                        <i class="fa-solid fa-times text-xl"></i>
+                    </button>
                 </div>
             </div>
             <nav class="p-4">
@@ -53,7 +67,7 @@
                         </a>
                     </li>
                     <li class="pt-4 mt-4 border-t border-blue-700">
-                        <a href="../index.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-red-600 rounded-lg transition">
+                        <a href="../login.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-red-600 rounded-lg transition">
                             <span><i class="fa-solid fa-right-from-bracket"></i></span>
                             <span>Logout</span>
                         </a>
@@ -65,11 +79,16 @@
         <!-- Main Content -->
         <div class="flex-1 overflow-y-auto">
             <!-- Top Bar -->
-            <header class="bg-white shadow-sm sticky top-0 z-10">
-                <div class="flex items-center justify-between px-8 py-4">
-                    <div>
-                        <a href="create-news.html" class="text-blue-600 hover:text-blue-800 text-sm">← Kembali</a>
-                        <h1 class="text-2xl font-bold text-gray-800 mt-1">Tambah Berita Baru</h1>
+            <header class="bg-white shadow-sm sticky top-0 z-20">
+                <div class="flex items-center justify-between px-4 lg:px-8 py-4">
+                    <div class="flex items-center space-x-4">
+                        <button id="hamburger" class="lg:hidden text-gray-700">
+                            <i class="fa-solid fa-bars text-xl"></i>
+                        </button>
+                        <div>
+                            <a href="news.html" class="text-blue-600 hover:text-blue-800 text-sm">← Kembali</a>
+                            <h1 class="text-xl lg:text-2xl font-bold text-gray-800 mt-1">Tambah Berita Baru</h1>
+                        </div>
                     </div>
                     <div class="w-10 h-10 bg-blue-600 rounded-full flex items-center justify-center text-white font-bold">
                         A
@@ -78,9 +97,9 @@
             </header>
 
             <!-- Form Content -->
-            <main class="p-8">
+            <main class="p-4 lg:p-8">
                 <form onsubmit="handleSubmit(event)" class="max-w-4xl mx-auto">
-                    <div class="bg-white rounded-lg shadow p-8 space-y-6">
+                    <div class="bg-white rounded-lg shadow p-4 lg:p-8 space-y-6">
                         <!-- Judul Berita -->
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Judul Berita <span class="text-red-500">*</span></label>
@@ -107,7 +126,7 @@
                         </div>
 
                         <!-- Kategori & Tag -->
-                        <div class="grid md:grid-cols-2 gap-6">
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-6">
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-2">Kategori <span class="text-red-500">*</span></label>
                                 <select required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
@@ -132,16 +151,16 @@
                         <!-- Upload Gambar -->
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Upload Gambar Cover <span class="text-red-500">*</span></label>
-                            <div class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center hover:border-blue-500 transition cursor-pointer">
+                            <div class="border-2 border-dashed border-gray-300 rounded-lg p-6 lg:p-8 text-center hover:border-blue-500 transition cursor-pointer">
                                 <input type="file" id="imageUpload" accept="image/*" class="hidden" onchange="previewImage(event)">
                                 <label for="imageUpload" class="cursor-pointer">
                                     <div id="uploadPlaceholder">
-                                        <div class="text-6xl mb-3"><i class="fa-solid fa-camera"></i></div>
+                                        <div class="text-4xl lg:text-6xl mb-3"><i class="fa-solid fa-camera"></i></div>
                                         <p class="text-gray-600 font-medium mb-1">Klik untuk upload gambar</p>
                                         <p class="text-sm text-gray-500">PNG, JPG, JPEG (max 2MB)</p>
                                     </div>
                                     <div id="imagePreview" class="hidden">
-                                        <img id="previewImg" class="max-h-64 mx-auto rounded-lg" alt="Preview">
+                                        <img id="previewImg" class="w-full max-h-48 lg:max-h-64 mx-auto rounded-lg object-cover" alt="Preview">
                                         <button type="button" onclick="removeImage()" class="mt-3 text-red-600 hover:text-red-800 text-sm">Hapus Gambar</button>
                                     </div>
                                 </label>
@@ -165,29 +184,29 @@
                             <label class="block text-sm font-medium text-gray-700 mb-2">Konten Berita <span class="text-red-500">*</span></label>
                             <textarea 
                                 id="kontenBerita"
-                                rows="15"
+                                rows="10"
                                 required
                                 placeholder="Tulis konten berita di sini..."
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent font-mono text-sm"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent font-mono text-sm min-h-[200px]"
                             ></textarea>
                             <p class="text-xs text-gray-500 mt-1">Editor sederhana. Untuk produksi, gunakan rich text editor seperti CKEditor atau TinyMCE.</p>
                         </div>
 
                         <!-- Action Buttons -->
-                        <div class="flex items-center justify-end space-x-4 pt-6 border-t">
-                            <a href="news.html" class="px-6 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition font-medium">
+                        <div class="flex flex-col sm:flex-row items-stretch sm:items-center justify-end space-y-3 sm:space-y-0 sm:space-x-4 pt-6 border-t">
+                            <a href="news.html" class="w-full sm:w-auto px-6 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition font-medium text-center">
                                 Batal
                             </a>
                             <button 
                                 type="button"
                                 onclick="saveDraft()"
-                                class="px-6 py-3 bg-gray-600 text-white rounded-lg hover:bg-gray-700 transition font-medium"
+                                class="w-full sm:w-auto px-6 py-3 bg-gray-600 text-white rounded-lg hover:bg-gray-700 transition font-medium"
                             >
                                 <i class="fa-solid fa-floppy-disk"></i> Simpan Draft
                             </button>
                             <button 
                                 type="submit"
-                                class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition font-medium"
+                                class="w-full sm:w-auto px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition font-medium"
                             >
                                 <i class="fa-solid fa-circle-check"></i> Submit untuk Review
                             </button>
@@ -199,7 +218,7 @@
     </div>
 
     <!-- Toast Notification (Hidden by default) -->
-    <div id="toast" class="hidden fixed top-6 right-6 bg-green-500 text-white px-6 py-4 rounded-lg shadow-lg z-50">
+    <div id="toast" class="hidden fixed top-6 right-4 lg:right-6 bg-green-500 text-white px-4 lg:px-6 py-4 rounded-lg shadow-lg z-50 max-w-sm">
         <div class="flex items-center space-x-3">
             <span class="text-2xl">✓</span>
             <div>
@@ -210,6 +229,26 @@
     </div>
 
     <script>
+        // Sidebar toggle
+        const sidebar = document.getElementById('sidebar');
+        const overlay = document.getElementById('sidebarOverlay');
+        const hamburger = document.getElementById('hamburger');
+        const closeSidebar = document.getElementById('closeSidebar');
+
+        function openSidebar() {
+            sidebar.classList.remove('-translate-x-full');
+            overlay.classList.remove('hidden');
+        }
+
+        function closeSidebarFunc() {
+            sidebar.classList.add('-translate-x-full');
+            overlay.classList.add('hidden');
+        }
+
+        hamburger.addEventListener('click', openSidebar);
+        closeSidebar.addEventListener('click', closeSidebarFunc);
+        overlay.addEventListener('click', closeSidebarFunc);
+
         // Auto-generate slug from title
         document.getElementById('judulBerita').addEventListener('input', function(e) {
             const title = e.target.value;
